# swagger.json
@@ -524,21 +524,11 @@
           }
         }
       },
-      
+
       "get": {
         "tags": ["Notices"],
         "summary": "Get all my notices",
-        "parameters": [
-          {
-            "in": "query",
-            "name": "query",
-            "schema": {
-              "type": "string"
-            },
-            "required": false,
-            "description": "To search in a category, write a search word"
-          }
-        ],
+        "parameters": [],
         "security": [
           {
             "Bearer": []
@@ -552,6 +542,40 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/AllMyNoticeResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "No authorization",
+            "content": {}
+          },
+          "404": {
+            "description": "Not found",
+            "content": {}
+          },
+          "500": {
+            "description": "Server error",
+            "content": {}
+          }
+        }
+      }
+    },
+
+    "/api/notices/title/{title}": {
+      "get": {
+        "tags": ["Notices"],
+        "summary": "Get notice by title",
+        "parameters": [],
+        "security": [],
+        "requestBody": {},
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NoticeTitleResponse"
                 }
               }
             }
@@ -648,6 +672,127 @@
           },
           "404": {
             "description": "Wrong address or id",
+            "content": {}
+          },
+          "500": {
+            "description": "Server error",
+            "content": {}
+          }
+        }
+      }
+    },
+
+    "/api/notices/favorites/{noticeId}": {
+      "post": {
+        "tags": ["Notices"],
+        "summary": "Add notice to favorites",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "noticeId",
+            "required": true,
+            "description": "Notice id"
+          }
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "requestBody": {},
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AddFavoritesResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {}
+          },
+          "401": {
+            "description": "No authorization",
+            "content": {}
+          },
+          "500": {
+            "description": "Server error",
+            "content": {}
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Notices"],
+        "summary": "Delete notice from favorites",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "noticeId",
+            "required": true,
+            "description": "Notice id"
+          }
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "requestBody": {},
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DelFavoritesResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {}
+          },
+          "401": {
+            "description": "No authorization",
+            "content": {}
+          },
+          "500": {
+            "description": "Server error",
+            "content": {}
+          }
+        }
+      }
+    },
+
+    "/api/notices/user/favorites": {
+      "get": {
+        "tags": ["Notices"],
+        "summary": "Get user's favorites",
+        "parameters": [],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "requestBody": {},
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AllFavoritesResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "No authorization",
             "content": {}
           },
           "500": {
@@ -1096,7 +1241,7 @@
               "category": "sell",
               "title": "Capitan Morgan",
               "name": "Dog",
-              "birthday": "2023-12-07T23:00:00.000Z",
+              "birthday": "10.01.2021",
               "breed": "German sheppard",
               "location": "Kyiv, Kyiv",
               "sex": "male",
@@ -1262,7 +1407,7 @@
               "birthday": {
                 "type": "string",
                 "description": "Pet's birthday",
-                "example": "2002-12-20T22:00:00.000Z"
+                "example": "10.01.2021"
               },
               "breed": {
                 "type": "string",
@@ -1332,37 +1477,42 @@
             "_id": {
               "type": "string",
               "description": "Notice id",
-              "example": "64173dc27a54d5990f1c65aa"
+              "example": "64184faeddbecbc68b3336d6"
+            },
+            "category": {
+              "type": "string",
+              "description": "Notice category",
+              "example": "sell"
             },
             "title": {
               "type": "string",
               "description": "Notice title",
-              "example": "Mursik for sale"
+              "example": "Сute Dog"
             },
             "name": {
               "type": "string",
               "description": "Pet's name",
-              "example": "Mursik"
+              "example": "Fill"
             },
             "birthday": {
               "type": "string",
               "description": "Pet's birthday",
-              "example": "2002-12-20T22:00:00.000Z"
+              "example": "10.01.2021"
             },
             "breed": {
               "type": "string",
               "description": "Pet's breed",
               "example": "German sheppard"
             },
-            "location": {
-              "type": "string",
-              "description": "Location",
-              "example": "Kyiv, Kyiv"
-            },
             "sex": {
               "type": "string",
               "description": "Pet's sex",
               "example": "male"
+            },
+            "location": {
+              "type": "string",
+              "description": "Location",
+              "example": "Kyiv, Kyiv"
             },
             "comments": {
               "type": "string",
@@ -1388,16 +1538,6 @@
               "type": "string",
               "description": "Owner id",
               "example": "64170f9d4b7fae4970a34473"
-            },
-            "createdAt": {
-              "type": "string",
-              "description": "Notice createdAt",
-              "example": "2023-01-30T22:04:29.984Z"
-            },
-            "updatedAt": {
-              "type": "string",
-              "description": "Notice updatedAt",
-              "example": "2023-01-30T22:04:29.984Z"
             }
           }
         }
@@ -1419,22 +1559,22 @@
           "title": {
             "type": "string",
             "description": "Notice title",
-            "example": "Mursik for sale"
+            "example": "Сute Dog"
           },
           "name": {
             "type": "string",
             "description": "Pet's name",
-            "example": "Mursik"
+            "example": "Sheppel"
           },
           "birthday": {
             "type": "string",
             "description": "Pet's birthday",
-            "example": "2002-12-20T22:00:00.000Z"
+            "example": "10.01.2021"
           },
           "breed": {
             "type": "string",
             "description": "Pet's breed",
-            "example": "German sheppard"
+            "example": "Pomeranian"
           },
           "sex": {
             "type": "string",
@@ -1444,22 +1584,22 @@
           "location": {
             "type": "string",
             "description": "Location",
-            "example": "Kyiv, Kyiv"
+            "example": "Lviv"
           },
           "comments": {
             "type": "string",
             "description": "Notice comments",
-            "example": "Mursik for sale"
-          },
-          "avatarURL": {
-            "type": "string",
-            "description": "Pet's avatar",
-            "example": "https://"
+            "example": "Сute Dog looking for a home"
           },
           "price": {
             "type": "number",
             "description": "Notice price",
             "example": 1
+          },
+          "avatarURL": {
+            "type": "string",
+            "description": "Pet's avatar",
+            "example": "https://"
           },
           "favorite": {
             "type": "array",
@@ -1468,17 +1608,91 @@
           },
           "owner": {
             "type": "string",
-            "example": "6416be486977b47c2e4f018a"
+            "example": "641569ddd95d1bcfef69ab73"
+          },
+          "idCloudAvatar": {
+            "type": "string",
+            "example": "images/szl4p5csezqnilfcbbsg"
           },
           "createdAt": {
             "type": "string",
             "description": "Notice createdAt",
-            "example": "2023-03-19T08:07:31.067Z"
+            "example": "2023-03-20T12:21:02.119Z"
           },
           "updatedAt": {
             "type": "string",
             "description": "Notice updatedAt",
-            "example": "2023-03-19T08:07:31.067Z"
+            "example": "2023-03-20T12:21:02.119Z"
+          }
+        }
+      },
+
+      "NoticeTitleResponse": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string",
+            "description": "Notice id",
+            "example": "6416c2c3a66a953bcc73999a"
+          },
+          "category": {
+            "type": "string",
+            "description": "Notice category",
+            "example": "sell"
+          },
+          "title": {
+            "type": "string",
+            "description": "Notice title",
+            "example": "Сute Dog"
+          },
+          "name": {
+            "type": "string",
+            "description": "Pet's name",
+            "example": "Sheppel"
+          },
+          "birthday": {
+            "type": "string",
+            "description": "Pet's birthday",
+            "example": "10.01.2021"
+          },
+          "breed": {
+            "type": "string",
+            "description": "Pet's breed",
+            "example": "Pomeranian"
+          },
+          "sex": {
+            "type": "string",
+            "description": "Pet's sex",
+            "example": "male"
+          },
+          "location": {
+            "type": "string",
+            "description": "Location",
+            "example": "Lviv"
+          },
+          "comments": {
+            "type": "string",
+            "description": "Notice comments",
+            "example": "Сute Dog looking for a home"
+          },
+          "price": {
+            "type": "number",
+            "description": "Notice price",
+            "example": 1
+          },
+          "avatarURL": {
+            "type": "string",
+            "description": "Pet's avatar",
+            "example": "https://"
+          },
+          "favorite": {
+            "type": "array",
+            "description": "User's phone",
+            "example": []
+          },
+          "owner": {
+            "type": "string",
+            "example": "641569ddd95d1bcfef69ab73"
           }
         }
       },
@@ -1491,6 +1705,64 @@
             "description": "Notice deleted",
             "example": "Notice deleted"
           }
+        }
+      },
+
+      "AddFavoritesResponse": {
+        "type": "object",
+        "properties": {
+          "userId": {
+            "type": "string",
+            "description": "User's id",
+            "example": "63d83eed283db645e170fd5f"
+          },
+          "noticeId": {
+            "type": "string",
+            "description": "Notice id",
+            "example": "63d83eed283db645e170fd5f"
+          },
+          "message": {
+            "type": "string",
+            "description": "Message",
+            "example": "success"
+          }
+        }
+      },
+
+      "DelFavoritesResponse": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "example": "Deleted from favorites"
+          }
+        }
+      },
+
+      "AllFavoritesResponse": {
+        "type": "object",
+        "properties": {
+          "notices": []
+        },
+        "example": {
+          "notices": [
+            {
+              "_id": "641710354b7fae4970a34478",
+              "category": "sell",
+              "title": "Capitan Morgan",
+              "name": "Dog",
+              "birthday": "10.01.2021",
+              "breed": "German sheppard",
+              "location": "Kyiv, Kyiv",
+              "sex": "male",
+              "comments": "Murzik for sale",
+              "avatarURL": "https://",
+              "price": 1,
+              "favorite": [],
+              "owner": "64170f9d4b7fae4970a34473",
+              "idCloudAvatar": "images/szl4p5csezqnilfcbbsg"
+            }
+          ]
         }
       }
     },
